# Kaggle-SpaceshipTitanic

./: .gitignore  README.md  pyproject.toml
src/: data_prep.py  main.py  model_pipeline.py
tests/: test_main.py
