[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SpaceshipTitanic"
version = "0.1.0"
description = "A brief description of your project"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "kaggle",
    "matplotlib",
    "boruta",
    "scikit-learn",
    "seaborn",
    "xgboost",
    
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
